ThemeService + component Integratie nog niet klaar.

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -5,6 +5,8 @@
     <li><a routerLink="/over">Over</a></li>
   </ul>
 </nav>
+<app-theme></app-theme>
+
 
 <!-- Met deze tag geven we aan waar de 'klokken' en 'over' componenten 
      hun content kunnen renderen-->
