--- a/Client/src/app/klok/klok.component.html
+++ b/Client/src/app/klok/klok.component.html
@@ -1,4 +1,4 @@
-<section [className]="isNight ? 'dark': 'light'">
+<section [className]="dayOrNight()">
     <p>
         @if (isNight) {
             <span>&#9789;</span>
