--- a/Client/src/app/klok/klok.component.css
+++ b/Client/src/app/klok/klok.component.css
@@ -1,9 +1,19 @@
-.dark {
+.night-dark {
     background-color: #000;
+    color: #eae7e7;
+}
+
+.night-light {
+    background-color: #c0c0c0;
     color: #fff;
 }
 
-.light {
-    background-color: #fff;
+.day-dark {
+    background-color: #e0dfdf;
+    color: #000;
+}
+
+.day-light {
+    background-color: #c0c0c0;
     color: #000;
 }
