--- a/Client/src/app/klok/klok.component.html
+++ b/Client/src/app/klok/klok.component.html
@@ -1,4 +1,4 @@
-<section [className]="dayOrNight()">
+<section [className]="dayOrNightCssClass()">
     <p>
         @if (isNight) {
             <span>&#9789;</span>
