rename theme -> theme-selector

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -7,7 +7,7 @@
         <li><a routerLink="/over">Over</a></li>
       </ul>
     </nav>
-    <app-theme></app-theme>  
+    <app-theme-selector></app-theme-selector>  
   </header>
   
   <main>
