--- a/Client/src/app/klok/klok.component.html
+++ b/Client/src/app/klok/klok.component.html
@@ -1,6 +1,6 @@
 <section [className]="dayOrNightCssClass()">
     <p>
-        @if (isNight) {
+        @if (isNight()) {
             <span>&#9789;</span>
         } @else {
             <span>&#9788;</span>
